# wikipedia_scrapper

./: pyproject.toml  requirements.txt  save_data.py  uv-assistant.py
